# soccer-leagues

./: .env.example  .gitignore  README.md
csgo-leagues-android/: README.md  build.gradle.kts  settings.gradle.kts
csgo-leagues-android/app/: build.gradle.kts
csgo-leagues-android/app/src/main/: AndroidManifest.xml
csgo-leagues-android/app/src/main/cpp/: CMakeLists.txt
csgo-leagues-android/gradle/wrapper/: gradle-wrapper.properties
csgo-leagues-ios/: README.md
csgo-leagues-ios/csgo-leagues-ios/: LaunchScreen.storyboard  csgo_leagues_iosApp.swift
csgo-leagues-ios/csgo-leagues-ios.xcodeproj/: project.pbxproj
csgo-leagues-ios/csgo-leagues-ios/App/: AppFeature.swift
csgo-leagues-ios/csgo-leagues-ios/Assets.xcassets/fuze_logo.imageset/: Contents.json
csgo-leagues-ios/csgo-leagues-ios/Core/DesignSystem/: AppColors.swift  Color+Hex.swift
csgo-leagues-ios/csgo-leagues-ios/Core/Extensions/: URL+Thumbnail.swift
csgo-leagues-ios/csgo-leagues-ios/Core/Secrets/: secrets.c
csgo-leagues-ios/csgo-leagues-iosTests/: csgo_leagues_iosTests.swift
csgo-leagues-ios/csgo-leagues-iosUITests/: csgo_leagues_iosUITests.swift  csgo_leagues_iosUITestsLaunchTests.swift
scripts/: generate_secrets.py
soccer-league/soccer-league/: ContentView.swift  soccer-league-Bridging-Header.h  soccer_leagueApp.swift
soccer-league/soccer-league.xcodeproj/: project.pbxproj
soccer-league/soccer-league/App/: AppView.swift
soccer-league/soccer-leagueTests/: soccer_leagueTests.swift
soccer-league/soccer-leagueUITests/: soccer_leagueUITests.swift  soccer_leagueUITestsLaunchTests.swift
(+161 files in other folders)
